Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "eigen_value, eigen_vector = np.linalg.eig(cov)\n",
+    "eigen_vector"
+   ]
   },
   {
    "cell_type": "code",
